<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.halanx.Login"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical"
        android:background="@drawable/loginlayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"/>
            <!-- ADDED SPACER VIEW -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/closebuttonlogin"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/_34sdp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                android:text="@string/x"
                android:textColor="@color/grey"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:padding="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_16sdp"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginemail5"
                        android:textSize="@dimen/_12sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress">
                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_16sdp"
                    android:padding="@dimen/_12sdp"
                    android:layout_marginTop="0dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:textSize="@dimen/_12sdp"
                        android:id="@+id/login_pass"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/exp1"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"/>

                <Button
                    android:layout_width="@dimen/_101sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/login_button_text"
                    android:id="@+id/login_button"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-smallcaps"
                    android:background="@drawable/login_button_in_fragment"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>
