<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:id="@+id/imageView"
                android:src="@drawable/house"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/_4sdp"
                android:padding="@dimen/_3sdp" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:fontFamily="sans-serif-medium"
                android:text="@string/name_of_doctor"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:textSize="@dimen/_14sdp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:src="@drawable/halanx" />

                <TextView
                    android:id="@+id/bed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:fontFamily="sans-serif-medium"
                    android:lineSpacingExtra="2.7sp"
                    android:text="@string/rate"
                    android:textColor="#c2000000"
                    android:textStyle="normal" />
            </LinearLayout>


            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewTitle"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:fontFamily="sans-serif-medium"
                android:text="@string/degree_of_doctor"
                android:textColor="#c2000000"
                android:textSize="@dimen/_11sdp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/accommodations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:fontFamily="sans-serif"
                android:text="@string/doctor_specialtization"
                android:textColor="#8a000000"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/locationicon"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_below="@+id/accommodations"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:src="@drawable/halanx" />

            <TextView
                android:id="@+id/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/accommodations"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_toEndOf="@+id/locationicon"
                android:layout_toRightOf="@+id/locationicon"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="2.7sp"
                android:text="@string/doctor_location"
                android:textColor="#c7000000"
                android:textSize="@dimen/_10sdp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/watchIcon"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_below="@+id/locationicon"
                android:layout_marginLeft="@dimen/_6sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:src="@drawable/halanx" />

            <TextView
                android:id="@+id/furnished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/locationicon"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toEndOf="@+id/watchIcon"
                android:layout_toRightOf="@+id/watchIcon"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="2.7sp"
                android:text="@string/time_of_work"
                android:textColor="#c7000000"
                android:textSize="@dimen/_10sdp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/workIcon"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_below="@+id/imageView"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_10sdp"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_toEndOf="@+id/workIcon"
                android:layout_toRightOf="@+id/workIcon"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="2.7sp"
                android:textColor="#c7000000"
                android:textSize="@dimen/_11sdp"
                android:textStyle="normal" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>