<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginn"
    android:background="@color/grey"
    tools:context=".Login_Activity">
    <LinearLayout
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_17sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_8sdp"
            android:shadowColor="#29000000"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:lineSpacingExtra="1sp"
            android:textStyle="normal"
            android:textColor="#000000"
            android:text="@string/or_continue_with_email"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.911"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:weightSum="1">

                <Button
                    android:shadowColor="#29000000"
                    android:shadowDy="3"
                    android:shadowRadius="6"
                    android:id="@+id/login"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.20"
                    android:background="@drawable/log_in_button"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.125"
            android:background="@drawable/images"
            android:contentDescription="@string/sa" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>